--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <p>/ person</p>
             </div>
 
-            <span id="tipAmoutValue">$0.00</span>
+            <span id="tipAmoutValue">R$0.00</span>
           </div>
 
           <div class="values">
@@ -76,7 +76,7 @@
               <p>/ person</p>
             </div>
 
-            <span id="totalPerPersonValue">$0.00</span>
+            <span id="totalPerPersonValue">R$0.00</span>
           </div>
         </div>
 
