--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="values-box">
         
         <div class="form-group">
-          <label for="bill">Bill</label>
+          <label for="bill">Valor da conta</label>
           <div class="input">
             <img src="./images/icon-dollar.svg" alt="Icon dolar">
             <input id="bill" type="text" placeholder="0">
@@ -38,19 +38,19 @@
         </div>
 
         <div class="tip-percentage">
-          <h3>Select Tip %</h3>
+          <h3>Selecione a gorgeta %</h3>
           <div class="buttons-grid">
             <button type="button" class="tip-button">5%</button>
             <button type="button" class="tip-button">10%</button>
             <button type="button" class="tip-button">15%</button>
             <button type="button" class="tip-button">25%</button>
             <button type="button" class="tip-button">50%</button>
-            <input type="text" id="tipCustomValue" placeholder="Custom">
+            <input type="text" id="tipCustomValue" placeholder="Outro">
           </div>
         </div>
 
         <div class="form-group">
-          <label for="people">Number of people</label>
+          <label for="people">Número de pessoas</label>
           <div class="input">
             <img src="./images/icon-person.svg" alt="Icon dolar">
             <input id="people" type="text" placeholder="0">
@@ -63,8 +63,8 @@
         <div class="total-values">
           <div class="values">
             <div>
-              <h6>Tip amount</h6>
-              <p>/ person</p>
+              <h6>Valor da gorgeta</h6>
+              <p>por pessoa</p>
             </div>
 
             <span id="tipAmoutValue">R$0.00</span>
@@ -73,7 +73,7 @@
           <div class="values">
             <div>
               <h6>Total</h6>
-              <p>/ person</p>
+              <p>por pessoa</p>
             </div>
 
             <span id="totalPerPersonValue">R$0.00</span>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="buttons">
-          <button type="submit" class="button">Calculate</button>
+          <button type="submit" class="button">Calcular</button>
           <button type="reset" class="button" disabled>Reset</button>
         </div>
       </div>
