--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="tip-percentage">
           <h3>Selecione a gorgeta %</h3>
           <div class="buttons-grid">
-            <button type="button" class="tip-button">5%</button>
-            <button type="button" class="tip-button">10%</button>
-            <button type="button" class="tip-button">15%</button>
-            <button type="button" class="tip-button">25%</button>
-            <button type="button" class="tip-button">50%</button>
+            <button type="button" class="tip-button" value="5" onclick="DOM.getButtonValue(this)">5%</button>
+            <button type="button" class="tip-button" value="10">10%</button>
+            <button type="button" class="tip-button" value="15">15%</button>
+            <button type="button" class="tip-button" value="25">25%</button>
+            <button type="button" class="tip-button" value="50">50%</button>
             <input type="text" id="tipCustomValue" placeholder="Outro">
           </div>
         </div>
